# git-llm-commit

./: .clinerules  .cz.toml  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
scripts/: release.sh
src/git_llm_commit/: __init__.py  llm_commit.py
tests/: __init__.py  test_init.py  test_llm_commit.py
